--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="75cab9">  <td>19/08/30 18:30:45</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.preSetUp()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@16c0663d]">&gt;&gt;preSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@997110508</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/30 18:30:53</td>   <td>7787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeClass()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@16c0663d]">&gt;&gt;validateBeforeClass</td> 
-<td>&nbsp;</td>  <td>main@997110508</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/30 18:30:53</td>   <td>7787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeMethod()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@16c0663d]">&gt;&gt;validateBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@997110508</td>   <td></td> </tr>
-<tr bgcolor="fcd18c">  <td>19/08/30 18:30:53</td>   <td>7787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageObject.tc01()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@16c0663d]">tc01</td> 
-  <td>main@997110508</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/30 18:30:58</td>   <td>13188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.validateAfterMethod()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@16c0663d]">&lt;&lt;validateAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@997110508</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/30 18:30:58</td>   <td>13189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeClass()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@16c0663d]">&gt;&gt;validateBeforeClass</td> 
-<td>&nbsp;</td>  <td>main@997110508</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/30 18:30:58</td>   <td>13192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeMethod()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@16c0663d]">&gt;&gt;validateBeforeMethod</td> 
-<td>&nbsp;</td>  <td>main@997110508</td>   <td></td> </tr>
-<tr bgcolor="fcd18c">  <td>19/08/30 18:30:58</td>   <td>13192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageObject.tc02()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@16c0663d]">tc02</td> 
-  <td>main@997110508</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/30 18:31:07</td>   <td>22418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.validateAfterMethod()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@16c0663d]">&lt;&lt;validateAfterMethod</td> 
-<td>&nbsp;</td>  <td>main@997110508</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/30 18:31:07</td>   <td>22418</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.validateAfterClass()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@16c0663d]">&lt;&lt;validateAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@997110508</td>   <td></td> </tr>
-<tr bgcolor="75cab9">  <td>19/08/30 18:31:07</td>   <td>22420</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@16c0663d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@997110508</td>   <td></td> </tr>
+<tr bgcolor="aaed64">  <td>19/09/09 16:01:35</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.preSetUp()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@75bd9247]">&gt;&gt;preSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="aaed64">  <td>19/09/09 16:01:42</td>   <td>6768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeClass()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@75bd9247]">&gt;&gt;validateBeforeClass</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="aaed64">  <td>19/09/09 16:01:42</td>   <td>6768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeMethod()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@75bd9247]">&gt;&gt;validateBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>19/09/09 16:01:42</td>   <td>6768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageObject.tc01()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@75bd9247]">tc01</td> 
+  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="aaed64">  <td>19/09/09 16:01:48</td>   <td>12156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.validateAfterMethod()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@75bd9247]">&lt;&lt;validateAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="aaed64">  <td>19/09/09 16:01:48</td>   <td>12157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeClass()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@75bd9247]">&gt;&gt;validateBeforeClass</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="aaed64">  <td>19/09/09 16:01:48</td>   <td>12157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.validateBeforeMethod()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@75bd9247]">&gt;&gt;validateBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>19/09/09 16:01:48</td>   <td>12157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginPageObject.tc02()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@75bd9247]">tc02</td> 
+  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="aaed64">  <td>19/09/09 16:01:57</td>   <td>21760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.validateAfterMethod()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@75bd9247]">&lt;&lt;validateAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="aaed64">  <td>19/09/09 16:01:57</td>   <td>21761</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.validateAfterClass()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@75bd9247]">&lt;&lt;validateAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
+<tr bgcolor="aaed64">  <td>19/09/09 16:01:57</td>   <td>21762</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.akshay.automation.testcases.pageobjects.TC_LoginPageObject@75bd9247]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@25126016</td>   <td></td> </tr>
 </table>
